# GeekTG

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.en.md  README.md  README.ru.md  docker-compose.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml
docker/: entrypoint.sh
docs/: README.md  database.md  inline.md  modules.md  security.md  utils.md
docs/en/: README.md  database.md  inline.md  modules.md  security.md  utils.md
docs/ru/: README.md  database.md  inline.md  modules.md  security.md  utils.md
docs/ru/api/: database.md  inline.md  loader.md  security.md  utils.md
friendly_telegram/: __init__.py  __main__.py  _device.py  configurator.py  dispatcher.py  inline.py  loader.py  log.py  main.py  security.py  utils.py
friendly_telegram/api/: __init__.py  context.py
friendly_telegram/database/: backend.py  frontend.py
friendly_telegram/inline/: __init__.py  manager.py  types.py
friendly_telegram/modules/: audio_editor.py  backuper.py  bot_token.py  chat_creator.py  corectrl.py  geek_config.py  geek_info.py  geek_security.py  geek_settings.py  help.py  loader.py  nocollisions.py  python.py  sysinfo.py  terminal.py  test.py  updater.py  ytdl.py
friendly_telegram/web/: context.py  core.py  initial_setup.py  root.py  status.py
friendly_telegram/web/templates/: base.jinja2  initial_root.jinja2  root.jinja2
tests/: conftest.py  test_database_backend.py  test_inline_types.py  test_loader.py  test_security.py  test_utils.py  test_web_status.py
