[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "friendly-telegram"
version = "3.1.25"
description = "GeekTG-flavoured Friendly Telegram userbot"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
# Upper bound: aiogram 2.x pins aiohttp <3.9, and aiohttp 3.8.x has no
# wheels for Python ≥3.14 (its Cython sources reference C internals that
# were removed in 3.14). Lifting this cap requires migrating to aiogram 3.x.
requires-python = ">=3.8,<3.14"
authors = [{ name = "GeekTG Team" }]
keywords = ["telegram", "userbot", "telethon"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "Telethon>=1.40,<2",
    "pythondialog>=3.5.3",
    "gitpython>=3.1.27",
    "babel>=2.9.1",
    "meval>=2.5",
    "aiohttp_jinja2>=1.5",
    "aiohttp",
    "Jinja2>=3.1.2",
    "requests>=2.28.0",
    "aiogram>=2.21,<3",
    "psutil>=5.9",
]

# Heavy media-processing libraries that many third-party modules pull in
# via `# requires:`. Bundling them in a named extra means:
#   1. pipx/uv-tool users don't pay for them unless they opt in.
#   2. The Docker image *does* opt in, and they end up in uv.lock — so the
#      entrypoint's `uv sync --frozen` no longer wipes them on every boot.
[project.optional-dependencies]
media = [
    "Pillow",
    "pydub",
    "ffmpeg-python",
    "wand",
    "moviepy",
    "numpy",
]

[project.scripts]
gtg = "friendly_telegram.__main__:_cli"
friendly-telegram = "friendly_telegram.__main__:_cli"

[project.urls]
Homepage = "https://github.com/D4n13l3k00/GeekTG"
Source = "https://github.com/D4n13l3k00/GeekTG"

[tool.hatch.build]
# Don't let .gitignore (which excludes runtime data dirs like
# translations/ and *.png) strip files that ship with the package.
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["friendly_telegram"]
include = [
    "friendly_telegram/**/*.py",
    "friendly_telegram/**/*.jinja2",
    "friendly_telegram/web/static/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "friendly_telegram/",
    "docs/",
    "README.md",
    "LICENSE",
]
