[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "friendly-telegram"
version = "4.1.3"
description = "GeekTG-flavoured Friendly Telegram userbot"
readme = "README.md"
license = { text = "AGPL-3.0-or-later" }
# aiohttp 3.10 has no Python 3.14 wheels yet — bump the upper bound when
# they ship. aiogram 3.x itself is happy on 3.13.
requires-python = ">=3.9,<3.14"
authors = [{ name = "GeekTG Team" }]
keywords = ["telegram", "userbot", "telethon"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "Telethon>=1.40,<2",
    "pythondialog>=3.5.3",
    "gitpython>=3.1.27",
    "babel>=2.9.1",
    "meval>=2.5",
    "aiohttp_jinja2>=1.5",
    "aiohttp>=3.10",
    "Jinja2>=3.1.2",
    "httpx>=0.27",
    # kept for compatibility with third-party custom modules that still
    # `import requests` — core no longer uses it.
    "requests>=2.28.0",
    "aiogram>=3.13,<4",
    "yt-dlp>=2025.1",
    # psutil source build fails on Termux (Android) — keep it as a soft
    # runtime dep; the only consumer (web/status.py) probes for it via
    # ``_try_psutil()`` and degrades to "stats unavailable" when missing.
    'psutil>=5.9; sys_platform != "android"',
    "audioop-lts>=0.2.1; python_version>='3.13'",
]

# Heavy media-processing libraries that many third-party modules pull in
# via `# requires:`. Bundling them in a named extra means:
#   1. pipx/uv-tool users don't pay for them unless they opt in.
#   2. The Docker image *does* opt in, and they end up in uv.lock — so the
#      entrypoint's `uv sync --frozen` no longer wipes them on every boot.
[project.optional-dependencies]
media = [
    "Pillow",
    "pydub",
    "ffmpeg-python",
    "wand",
    "moviepy",
    "numpy",
    "audioop-lts; python_version>='3.13'",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "pre-commit>=3.7",
    "ruff>=0.9",
    "black>=25",
    "isort>=6",
]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
known_first_party = ["friendly_telegram"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
# Conservative defaults — pyflakes + a subset of pycodestyle. Don't fight
# black on whitespace/line-length, and don't auto-rewrite stylistic things
# the project hasn't opted into yet.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line length — black's job
    "E741",  # ambiguous variable names ("l", "I") — already used in places
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"

[project.scripts]
gtg = "friendly_telegram.__main__:_cli"
friendly-telegram = "friendly_telegram.__main__:_cli"

[project.urls]
Homepage = "https://github.com/D4n13l3k00/GeekTG"
Source = "https://github.com/D4n13l3k00/GeekTG"

[tool.hatch.build]
# Don't let .gitignore (which excludes runtime data dirs like
# translations/ and *.png) strip files that ship with the package.
ignore-vcs = true

[tool.hatch.build.targets.wheel]
packages = ["friendly_telegram"]
include = [
    "friendly_telegram/**/*.py",
    "friendly_telegram/**/*.jinja2",
    "friendly_telegram/web/static/**",
]

[tool.hatch.build.targets.sdist]
include = [
    "friendly_telegram/",
    "docs/",
    "README.md",
    "LICENSE",
]
